[gd_scene load_steps=59 format=3 uid="uid://cijoautimuua5"]

[ext_resource type="Script" uid="uid://c7vv5i4f5v710" path="res://scripts/game.gd" id="1_ca42v"]
[ext_resource type="Texture2D" uid="uid://cv0tqpisxhrod" path="res://images/board/mat/mat.png" id="2_qnb83"]
[ext_resource type="Texture2D" uid="uid://cg8jry153ouii" path="res://images/board/bottom-buttons/sortrank.png" id="3_ssvqc"]
[ext_resource type="Texture2D" uid="uid://cneb3581youap" path="res://images/board/bottom-buttons/sortsuit.png" id="4_264po"]
[ext_resource type="Texture2D" uid="uid://jd5o5g53wqf6" path="res://images/board/bottom-buttons/discard.png" id="5_1kice"]
[ext_resource type="Texture2D" uid="uid://cjg1njfkm0vfd" path="res://images/board/bottom-buttons/discard-grey.png" id="6_5newe"]
[ext_resource type="Texture2D" uid="uid://dhlmhi6enlpbo" path="res://images/board/bottom-buttons/play.png" id="7_37s47"]
[ext_resource type="Texture2D" uid="uid://bvayywyipweyk" path="res://images/board/bottom-buttons/play-grey.png" id="8_bt5mj"]
[ext_resource type="Texture2D" uid="uid://k0jxldpehadk" path="res://images/board/sidebar/sidebar.png" id="9_e1j6l"]
[ext_resource type="Texture2D" uid="uid://bsembqx4tn0eg" path="res://images/symbols/numbers.png" id="11_dinhu"]
[ext_resource type="Texture2D" uid="uid://btyjj6alhpcsu" path="res://images/board/sidebar/buttons/info.png" id="12_0sl42"]
[ext_resource type="Texture2D" uid="uid://e0j8ab05p427" path="res://images/board/mat/joker-area.png" id="12_sww3w"]
[ext_resource type="Script" uid="uid://db1x5qp4jj46e" path="res://scripts/run_info.gd" id="13_458eo"]
[ext_resource type="Texture2D" uid="uid://bdw3okq5fdjf2" path="res://images/board/sidebar/shop-sidebar-1.png" id="13_e1j6l"]
[ext_resource type="Texture2D" uid="uid://bvqaaorm7bpd6" path="res://images/board/cash-out/cash-out.png" id="13_ir15t"]
[ext_resource type="Texture2D" uid="uid://bvtudkaj4go8g" path="res://images/board/sidebar/buttons/settings.png" id="13_oaba0"]
[ext_resource type="Script" uid="uid://qj0k6hkypgdi" path="res://scripts/shop.gd" id="13_pl11u"]
[ext_resource type="Script" uid="uid://c0i0j38gje1kl" path="res://scripts/jokers.gd" id="13_qouja"]
[ext_resource type="Script" path="res://scripts/cashout.gd" id="13_ssvqc"]
[ext_resource type="Texture2D" uid="uid://ns8h037tpe4k" path="res://images/board/mat/consumable-area.png" id="13_suyxu"]
[ext_resource type="Texture2D" uid="uid://d138fy7r4bgeg" path="res://images/board/cash-out/cash-out-selected.png" id="14_ca42v"]
[ext_resource type="Texture2D" uid="uid://n8br4mtr224o" path="res://images/board/sidebar/shop-sidebar-2.png" id="14_pl11u"]
[ext_resource type="Script" uid="uid://dp8isqxsoevh" path="res://scripts/sidebar.gd" id="14_suyxu"]
[ext_resource type="Texture2D" uid="uid://by84gotttlsfl" path="res://images/board/sidebar/shop-sidebar-3.png" id="15_bhx41"]
[ext_resource type="Script" path="res://scripts/consumables.gd" id="15_pr1ej"]
[ext_resource type="Texture2D" uid="uid://8mkiimnrgjke" path="res://images/board/cash-out/cash-out-disabled.png" id="15_rysoc"]
[ext_resource type="Texture2D" uid="uid://yolk82kxpyqc" path="res://images/cards/back.png" id="15_suyxu"]
[ext_resource type="Texture2D" uid="uid://ci46j8ptxdskk" path="res://images/board/cash-out/cash-out-hands.png" id="16_ca42v"]
[ext_resource type="Texture2D" uid="uid://dssvu8yog34e1" path="res://images/board/sidebar/shop-sidebar-4.png" id="16_qnb83"]
[ext_resource type="Script" uid="uid://bt1g21xjd08tc" path="res://scripts/deck.gd" id="16_qouja"]
[ext_resource type="Texture2D" uid="uid://lplj5as5ftk8" path="res://images/board/cash-out/cash-out-beat.png" id="16_rysoc"]
[ext_resource type="Script" path="res://scripts/deck_info.gd" id="16_sgl2t"]
[ext_resource type="Texture2D" uid="uid://bkwyr3gjhtl2w" path="res://images/board/sidebar/shop-sidebar-5.png" id="17_sww3w"]
[ext_resource type="Texture2D" uid="uid://euaxxcdeussy" path="res://images/board/sidebar/shop-sidebar-6.png" id="18_suyxu"]
[ext_resource type="Texture2D" uid="uid://d2rs274hkxifa" path="res://images/board/deck-info/faded-bg.png" id="23_8ool0"]
[ext_resource type="Texture2D" uid="uid://cgi8e3uotbq1c" path="res://images/board/deck-info/deck-info-background.png" id="23_gxtfn"]
[ext_resource type="Script" uid="uid://dtgwjbansr3jo" path="res://scripts/cover_mat.gd" id="24_02fa5"]
[ext_resource type="Texture2D" uid="uid://myc21tloye0t" path="res://images/board/cash-out/cash-out-interest.png" id="24_oaba0"]
[ext_resource type="SpriteFrames" uid="uid://drbu1qd2ihqa8" path="res://resources/number-sprite-frames.tres" id="25_nepv3"]
[ext_resource type="Texture2D" uid="uid://73qht4q8w40v" path="res://images/board/shop/shop-background.png" id="25_v2yb1"]
[ext_resource type="Texture2D" uid="uid://ccco8uqsgll5d" path="res://images/board/deck-info/back.png" id="26_7025r"]
[ext_resource type="Texture2D" uid="uid://0dras3rdwlj0" path="res://images/board/shop/reroll.png" id="26_js0lu"]
[ext_resource type="Texture2D" uid="uid://c61xds1gwkpn5" path="res://images/board/deck-info/full-deck.png" id="26_m4url"]
[ext_resource type="Texture2D" uid="uid://dl6r3o2jglp6a" path="res://images/board/shop/next-round.png" id="27_gxtfn"]
[ext_resource type="Texture2D" uid="uid://7htb31isba7y" path="res://images/board/deck-info/remaining.png" id="27_m4url"]
[ext_resource type="Texture2D" uid="uid://bk1w8yeigqvpd" path="res://images/board/shop/skip-button.png" id="28_js0lu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kvuet"]
atlas = ExtResource("11_dinhu")
region = Rect2(0, 0, 3, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_trtic"]
atlas = ExtResource("11_dinhu")
region = Rect2(3, 0, 3, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir15t"]
atlas = ExtResource("11_dinhu")
region = Rect2(6, 0, 3, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca42v"]
atlas = ExtResource("11_dinhu")
region = Rect2(9, 0, 3, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_rysoc"]
atlas = ExtResource("11_dinhu")
region = Rect2(12, 0, 3, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssvqc"]
atlas = ExtResource("11_dinhu")
region = Rect2(15, 0, 3, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_264po"]
atlas = ExtResource("11_dinhu")
region = Rect2(18, 0, 3, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kice"]
atlas = ExtResource("11_dinhu")
region = Rect2(21, 0, 3, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_5newe"]
atlas = ExtResource("11_dinhu")
region = Rect2(24, 0, 3, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_37s47"]
atlas = ExtResource("11_dinhu")
region = Rect2(27, 0, 3, 5)

[sub_resource type="SpriteFrames" id="SpriteFrames_f1jbl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvuet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trtic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir15t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca42v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rysoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssvqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_264po")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kice")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5newe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37s47")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_sgl2t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_e1j6l")
}, {
"duration": 1.0,
"texture": ExtResource("14_pl11u")
}, {
"duration": 1.0,
"texture": ExtResource("15_bhx41")
}, {
"duration": 1.0,
"texture": ExtResource("16_qnb83")
}, {
"duration": 1.0,
"texture": ExtResource("17_sww3w")
}, {
"duration": 1.0,
"texture": ExtResource("18_suyxu")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[node name="Game" type="Node2D"]
script = ExtResource("1_ca42v")
money = 99

[node name="Mat" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(53, 38)
texture = ExtResource("2_qnb83")

[node name="BottomButtons" type="Node2D" parent="Mat"]
position = Vector2(-8, 27)

[node name="PlayButton" type="TextureButton" parent="Mat/BottomButtons"]
offset_left = -20.0
offset_right = -1.0
offset_bottom = 9.0
texture_normal = ExtResource("7_37s47")
texture_disabled = ExtResource("8_bt5mj")
metadata/_edit_use_anchors_ = true

[node name="DiscardButton" type="TextureButton" parent="Mat/BottomButtons"]
offset_left = 15.0
offset_right = 44.0
offset_bottom = 9.0
texture_normal = ExtResource("5_1kice")
texture_disabled = ExtResource("6_5newe")

[node name="SortRankButton" type="TextureButton" parent="Mat/BottomButtons"]
offset_right = 7.0
offset_bottom = 8.0
texture_normal = ExtResource("3_ssvqc")
metadata/_edit_use_anchors_ = true

[node name="SortSuitButton" type="TextureButton" parent="Mat/BottomButtons"]
offset_left = 7.0
offset_right = 14.0
offset_bottom = 8.0
texture_normal = ExtResource("4_264po")
metadata/_edit_use_anchors_ = true

[node name="Sidebar" type="Sprite2D" parent="Mat"]
position = Vector2(-41.5, 0)
texture = ExtResource("9_e1j6l")
script = ExtResource("14_suyxu")

[node name="Discards" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(4, 11.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="MoneyOnes" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(4, 21.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="RoundTens" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(0, 31.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="RoundOnes" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(4.0113, 31.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="MoneyTens" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(-0.101526, 21.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="Hands" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(-4, 11.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="MultOnes" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(5.00258, 2.50171)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="MultTens" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(1.00258, 2.50171)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="ChipOnes" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(5, -5.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="ChipHundreds" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(-3, -5.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="ChipThousands" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(-7, -5.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="ChipTens" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(1, -5.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="MultHundreds" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(-2.99742, 2.50171)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="MultThousands" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(-6.99742, 2.50171)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="Ante" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(-5.98815, 31.495)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="ScoreOnes" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(6, -13.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="ScoreTens" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(2, -13.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="ScoreHundreds" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(-2, -13.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="ScoreThousands" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(-6, -13.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="ScoreTenThousands" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(6, -19.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="ScoreHundredThousands" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(2, -19.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="ScoreMillions" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(-2, -19.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="ScoreTenMillions" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(-6, -19.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="GoalTenThousands" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(6, -33.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="GoalHundredThousands" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(2, -33.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="GoalMillions" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(-2, -33.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="GoalTenMillions" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(-6, -33.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="GoalOnes" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(6, -27.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="GoalTens" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(2, -27.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="GoalHundreds" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(-2, -27.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="GoalThousands" type="AnimatedSprite2D" parent="Mat/Sidebar"]
position = Vector2(-6, -27.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="RunInfo" type="TextureButton" parent="Mat"]
offset_left = -49.0
offset_top = -9.0
offset_right = -34.0
offset_bottom = -2.0
texture_hover = ExtResource("12_0sl42")
script = ExtResource("13_458eo")

[node name="FadedBackground" type="Sprite2D" parent="Mat/RunInfo"]
visible = false
z_index = 10
position = Vector2(49, 9)
texture = ExtResource("23_8ool0")

[node name="CoverMat" type="Sprite2D" parent="Mat/RunInfo"]
visible = false

[node name="Settings" type="TextureButton" parent="Mat"]
offset_left = -49.0
offset_top = -1.0
offset_right = -34.0
offset_bottom = 6.0
texture_hover = ExtResource("13_oaba0")

[node name="Jokers" type="Sprite2D" parent="Mat"]
position = Vector2(-4, -30)
texture = ExtResource("12_sww3w")
offset = Vector2(0.5, 0.5)
script = ExtResource("13_qouja")

[node name="Consumables" type="Sprite2D" parent="Mat"]
position = Vector2(38, -30)
texture = ExtResource("13_suyxu")
offset = Vector2(0, 0.5)
script = ExtResource("15_pr1ej")

[node name="MoneyCountUI" type="VBoxContainer" parent="Mat"]
visible = false
texture_filter = 1
offset_left = -27.0
offset_top = -13.0
offset_right = 35.0
offset_bottom = 37.0
theme_override_constants/separation = -1
script = ExtResource("13_ssvqc")

[node name="CashOutButton" type="TextureButton" parent="Mat/MoneyCountUI"]
layout_mode = 2
texture_normal = ExtResource("13_ir15t")
texture_pressed = ExtResource("14_ca42v")
texture_disabled = ExtResource("15_rysoc")

[node name="MoneyGoal" type="TextureRect" parent="Mat/MoneyCountUI"]
layout_mode = 2
texture = ExtResource("16_rysoc")

[node name="MoneyGoalTenThousands" type="AnimatedSprite2D" parent="Mat/MoneyCountUI/MoneyGoal"]
position = Vector2(32.5, 4.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="MoneyGoalHundredThousands" type="AnimatedSprite2D" parent="Mat/MoneyCountUI/MoneyGoal"]
position = Vector2(28.5, 4.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="MoneyGoalMillions" type="AnimatedSprite2D" parent="Mat/MoneyCountUI/MoneyGoal"]
position = Vector2(24.5, 4.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="MoneyGoalTenMillions" type="AnimatedSprite2D" parent="Mat/MoneyCountUI/MoneyGoal"]
position = Vector2(20.5, 4.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="MoneyGoalOnes" type="AnimatedSprite2D" parent="Mat/MoneyCountUI/MoneyGoal"]
position = Vector2(48.5, 4.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="MoneyGoalTens" type="AnimatedSprite2D" parent="Mat/MoneyCountUI/MoneyGoal"]
position = Vector2(44.5, 4.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="MoneyGoalHundreds" type="AnimatedSprite2D" parent="Mat/MoneyCountUI/MoneyGoal"]
position = Vector2(40.5, 4.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="MoneyGoalThousands" type="AnimatedSprite2D" parent="Mat/MoneyCountUI/MoneyGoal"]
position = Vector2(36.5, 4.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="MoneyGoalGainedOnes" type="AnimatedSprite2D" parent="Mat/MoneyCountUI/MoneyGoal"]
position = Vector2(58.6015, 4.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="MoneyHands" type="TextureRect" parent="Mat/MoneyCountUI"]
layout_mode = 2
texture = ExtResource("16_ca42v")

[node name="MoneyHands" type="AnimatedSprite2D" parent="Mat/MoneyCountUI/MoneyHands"]
position = Vector2(3, 4)
sprite_frames = SubResource("SpriteFrames_f1jbl")
offset = Vector2(0.5, 0.5)

[node name="MoneyHandsGainedOnes" type="AnimatedSprite2D" parent="Mat/MoneyCountUI/MoneyHands"]
position = Vector2(58.6015, 4.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")

[node name="MoneyInterest" type="TextureRect" parent="Mat/MoneyCountUI"]
layout_mode = 2
texture = ExtResource("24_oaba0")

[node name="MoneyInterestGainedOnes" type="AnimatedSprite2D" parent="Mat/MoneyCountUI/MoneyInterest"]
position = Vector2(58, 4)
sprite_frames = SubResource("SpriteFrames_f1jbl")
offset = Vector2(0.5, 0.5)

[node name="DeckInfo" type="TextureButton" parent="Mat"]
z_index = 9
offset_left = 38.0
offset_top = 27.0
offset_right = 49.0
offset_bottom = 40.0
texture_normal = ExtResource("15_suyxu")
script = ExtResource("16_sgl2t")

[node name="FadedBackground" type="Sprite2D" parent="Mat/DeckInfo"]
visible = false
position = Vector2(-38, -27)
scale = Vector2(1.01923, 1)
texture = ExtResource("23_8ool0")

[node name="CoverMat" type="Sprite2D" parent="Mat/DeckInfo"]
visible = false
position = Vector2(-38, -27)
texture = ExtResource("23_gxtfn")
script = ExtResource("24_02fa5")
digit_frames = ExtResource("25_nepv3")
full_deck = ExtResource("26_m4url")
remaining = ExtResource("27_m4url")

[node name="ToggleButton" type="TextureButton" parent="Mat/DeckInfo/CoverMat"]
offset_left = -15.0
offset_top = 25.0
offset_right = 22.0
offset_bottom = 32.0
texture_disabled = ExtResource("26_m4url")

[node name="BackButton" type="TextureButton" parent="Mat/DeckInfo/CoverMat"]
offset_left = 23.0
offset_top = 25.0
offset_right = 47.0
offset_bottom = 32.0
texture_normal = ExtResource("26_7025r")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(57, 51)
script = ExtResource("16_qouja")

[node name="Shop" type="Node2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(52, 30)
script = ExtResource("13_pl11u")

[node name="ShopSidebar" type="AnimatedSprite2D" parent="Shop"]
position = Vector2(-41, 8)
sprite_frames = SubResource("SpriteFrames_sgl2t")
frame = 2
frame_progress = 0.354236
offset = Vector2(0.5, 0)

[node name="ShopBackground" type="Sprite2D" parent="Shop"]
position = Vector2(4, 18)
texture = ExtResource("25_v2yb1")
offset = Vector2(0.5, 0)

[node name="RerollButton" type="TextureButton" parent="Shop/ShopBackground"]
offset_left = -31.0
offset_top = -11.0
offset_right = -6.0
offset_bottom = 4.0
texture_normal = ExtResource("26_js0lu")

[node name="RerollCostOnes" type="AnimatedSprite2D" parent="Shop/ShopBackground/RerollButton"]
position = Vector2(18, 11)
sprite_frames = SubResource("SpriteFrames_f1jbl")
offset = Vector2(0.5, -0.5)

[node name="RerollCostTens" type="AnimatedSprite2D" parent="Shop/ShopBackground/RerollButton"]
position = Vector2(14, 10.5)
sprite_frames = SubResource("SpriteFrames_f1jbl")
offset = Vector2(0.5, 0)

[node name="RerollCostHundreds" type="AnimatedSprite2D" parent="Shop/ShopBackground/RerollButton"]
position = Vector2(10, 11)
sprite_frames = SubResource("SpriteFrames_f1jbl")
offset = Vector2(0.5, -0.5)

[node name="NextRoundButton" type="TextureButton" parent="Shop/ShopBackground"]
offset_left = -31.0
offset_top = -25.0
offset_right = -6.0
offset_bottom = -10.0
texture_normal = ExtResource("27_gxtfn")

[node name="SkipButton" type="TextureButton" parent="Shop"]
visible = false
offset_left = 16.0
offset_top = 35.0
offset_right = 33.0
offset_bottom = 44.0
texture_normal = ExtResource("28_js0lu")

[connection signal="pressed" from="Mat/BottomButtons/PlayButton" to="Mat/Sidebar" method="_on_play_button_pressed"]
[connection signal="pressed" from="Mat/BottomButtons/PlayButton" to="Deck" method="_on_play_button_pressed"]
[connection signal="pressed" from="Mat/BottomButtons/DiscardButton" to="Deck" method="_on_discard_button_pressed"]
[connection signal="pressed" from="Mat/BottomButtons/SortRankButton" to="Deck" method="_on_sort_rank_button_pressed"]
[connection signal="pressed" from="Mat/BottomButtons/SortSuitButton" to="Deck" method="_on_sort_suit_button_pressed"]
[connection signal="pressed" from="Mat/RunInfo" to="Mat/RunInfo" method="_on_pressed"]
[connection signal="pressed" from="Mat/MoneyCountUI/CashOutButton" to="Deck" method="_on_cash_out_button_pressed"]
[connection signal="pressed" from="Mat/DeckInfo" to="Mat/DeckInfo" method="_on_pressed"]
[connection signal="pressed" from="Mat/DeckInfo/CoverMat/ToggleButton" to="Mat/DeckInfo/CoverMat" method="_on_toggle_button_pressed"]
[connection signal="pressed" from="Mat/DeckInfo/CoverMat/BackButton" to="Mat/DeckInfo" method="_on_back_button_pressed"]
[connection signal="pressed" from="Shop/ShopBackground/RerollButton" to="Shop" method="_on_reroll_button_pressed"]
[connection signal="pressed" from="Shop/ShopBackground/NextRoundButton" to="Deck" method="_on_next_round_button_pressed"]
[connection signal="pressed" from="Shop/SkipButton" to="Shop" method="_on_skip_button_pressed"]
